--- a/packages/styles/lib/button.css
+++ b/packages/styles/lib/button.css
@@ -1,49 +1,125 @@
 :root {
-    --default-radius: 5px;
-    --font-size-small: 14px;
-    --line-height-smallText: 20px;
-    --space-half: 5px;
-    --space-double: 20px;
-
-    --button-personality: {
-        user-select: none;
-        cursor: pointer;
-        text-decoration: none !important;
-    }
+  --default-radius: 5px;
+  --font-size-small: 14px;
+  --line-height-smallText: 20px;
+  --space-half: 5px;
+  --space: 10px;
+  --space-double: 20px;
+  --space-triple: 30px;
+  --space-quadruple: 40px;
 }
 
+%button-personality {
+  user-select: none;
+  cursor: pointer;
+  text-decoration: none !important;
+}
 
 [data-swarm-button] {
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    transition: background 0.15s;
-    -webkit-appearance: none;
-    border-radius: var(--default-radius);
-    box-sizing: border-box;
-    font-size: var(--font-size-small);
-    line-height: var(--line-height-smallText);
-    outline: 0;
-    padding: var(--space-half) var(--space-double);
-    vertical-align: middle;
-    color: var(--color-viridian);
-    background-color: var(--color-white);
-    border: 1px solid var(--color-viridian);
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  transition: background 0.15s;
+  -webkit-appearance: none;
+  border-radius: var(--default-radius);
+  box-sizing: border-box;
+  font-size: var(--font-size-small);
+  line-height: var(--line-height-smallText);
+  outline: 0;
+  padding: var(--space-half) var(--space-triple);
+  vertical-align: middle;
 
-    @apply --button-personality;
+  @extend %button-personality;
+}
 
+/* focus & active */
+[data-swarm-button="default"]:focus,
+[data-swarm-button="default"]:active {
+  background-color: var(--color-viridian);
+  color: var(--color-white);
+  border: 1px solid var(--color-indigo);
+}
+
+[data-swarm-button="primary"]:focus,
+[data-swarm-button="primary"]:active {
+  border: 1px solid var(--color-alert-red)
+}
+
+[data-swarm-button="bordered"]:focus,
+[data-swarm-button="bordered"]:active {
+  background-color: var(--color-white);
+  color: var(--color-gray-7);
+  border: 1px solid var(--color-gray-5);
+}
+
+[data-swarm-button="neutral"]:focus,
+[data-swarm-button="neutral"]:active {
+  background-color: var(--color-gray-2);
+  color: var(--color-gray-7);
+  border: 1px solid var(--color-gray-3);
+}
+
+/* hovers */
+[data-swarm-button="default"]:hover {
+  background-color: var(--color-viridian);
+  color: var(--color-white);
+}
+
+[data-swarm-button="bordered"]:hover,
+[data-swarm-button="neutral"]:hover {
+  border: solid 1px var(--color-gray-4);
+}
+
+[data-swarm-button="primary"]:hover {
+  /* --color-peach at 90% */
+  background-color: rgba(246, 88, 88, .9);
+  border: solid 1px rgba(246, 88, 88, .9);
+}
+
+/* colors */
+[data-swarm-button="default"] {
+  background-color: var(--color-white);
+  border: 1px solid var(--color-viridian);
+  color: var(--color-viridian);
 }
 
 [data-swarm-button="primary"] {
-    background-color: var(--color-meetup-red);
+  background-color: var(--color-meetup-red);
+  border: 1px solid var(--color-meetup-red);
+  color: var(--color-white);
 }
+
 [data-swarm-button="neutral"] {
-    background-color: var(--color-meetup-red);
+  background-color: var(--color-gray-1);
+  border: 1px solid var(--color-gray-3);
+  color: var(--color-gray-7);
 }
+
 [data-swarm-button="bordered"] {
-    background-color: var(--color-meetup-red);
+  background-color: var(--color-white);
+  border: 1px solid var(--color-gray-3);
+  color: var(--color-gray-7);
 }
-[data-swarm-button]:disbaled {
-    background-color: var(--color-meetup-red);
+
+[data-swarm-button="inverted"] {
+  border: 1px solid var(--color-white);
+  color: var(--color-white);
+}
+
+[data-swarm-button="inverted"]:hover,
+[data-swarm-button="inverted"]:focus,
+[data-swarm-button="inverted"]:active {
+  opacity: 0.9;
+}
+
+[data-swarm-button="disabled"] {
+  background-color: var(--color-gray-2);
+  border: 1px solid var(--color-gray-2);
+  color: var(--color-gray-4);
+}
+
+/* small */
+[data-swarm-button][data-swarm-size="small"] {
+  padding: var(--space-half) var(--space-half);
 }
