--- a/packages/styles/lib/main.css
+++ b/packages/styles/lib/main.css
@@ -1,2 +1,4 @@
 @import 'swarm-constants/build/css/variables.css';
-@import './button.css';
+@import './components/button.css';
+@import './components/checkbox.css';
+@import './components/pill.css';
