--- a/packages/swarm-styles/lib/main.css
+++ b/packages/swarm-styles/lib/main.css
@@ -1,4 +1,7 @@
 @import '@meetup/swarm-constants/build/css/variables.css';
 @import './components/button.css';
 @import './components/checkbox.css';
-@import './components/pill.css';
+@import './components/radio.css';
+@import './components/textInput.css';
+@import './components/togglePill.css';
+@import './components/toggle.css';
