--- a/packages/swarm-styles/lib/main.css
+++ b/packages/swarm-styles/lib/main.css
@@ -5,3 +5,4 @@
 @import './components/textInput.css';
 @import './components/togglePill.css';
 @import './components/toggle.css';
+@import './components/select.css';
