add box shadow to select

--- a/packages/swarm-styles/lib/components/select.css
+++ b/packages/swarm-styles/lib/components/select.css
@@ -11,6 +11,7 @@
     padding-left: var(--size-space-default);
     width: 100%;
     border: 1px solid var(--color-gray-3);
+    box-shadow: 0px 1px 3px 0px var(--color-gray-5);
 }
 
 [data-swarm-select] select:hover {
@@ -19,7 +20,6 @@
 
 [data-swarm-select] select:focus {
     border-color: var(--color-viridian);
-    box-shadow: none;
     outline: none;
 }
 
