--- a/packages/swarm-styles/lib/components/select.css
+++ b/packages/swarm-styles/lib/components/select.css
@@ -2,6 +2,14 @@
     position:relative;
 }
 
+[data-swarm-select] label span {
+    color: var(--color-gray-5);
+}
+
+[data-swarm-select-helper-text] {
+    font-size: var(--font-size-small);
+}
+
 [data-swarm-select] select {
     appearance: none;
     user-select: none;
@@ -11,6 +19,7 @@
     padding-left: var(--size-space-default);
     width: 100%;
     border: 1px solid var(--color-gray-3);
+    /* ToDo: do we need a box shadow? do we want it on focus or on error states as well? */
     /* box-shadow: 0px 1px 3px 0px var(--color-gray-5); */
 }
 
