--- a/packages/swarm-styles/lib/components/toggle.css
+++ b/packages/swarm-styles/lib/components/toggle.css
@@ -24,6 +24,7 @@
 [data-swarm-toggle] [data-swarm-toggle-switch-disc] {
     height: 24px;
     width: 24px;
+    margin-top: -2px;
     border-radius: 50%;
     box-sizing: content-box;
     border: 1px solid var(--color-gray-4);
@@ -35,8 +36,11 @@
 }
 
 [data-swarm-toggle]:focus {
-    border: 1px solid yellow;
-    outline: none;
+    /* border: 1px solid yellow;
+    outline: none; */
+    outline-style: dotted;
+    outline-width: 2px;
+    outline-offset: var(--color-gray-3);
 }
 
 [data-swarm-toggle="checked"] {
