--- a/packages/swarm-styles/lib/components/togglePill.css
+++ b/packages/swarm-styles/lib/components/togglePill.css
@@ -14,11 +14,17 @@
     transition: background 0.15s;
     cursor: pointer;
     box-sizing: border-box;
+    padding: var(--size-space-half) var(--size-space-double);
+    font-size: var(--font-size-small);
+    line-height: var(--line-height-smallText);
 }
 
 [data-swarm-toggle-pill]:focus {
-    border: 1px solid yellow;
-    outline: none;
+    /* border: 1px solid yellow; */
+    /* outline: none; */
+    outline-style: dotted;
+    outline-width: 2px;
+    outline-offset: var(--color-gray-3);
 }
 
 [data-swarm-toggle-pill="checked"] {
