--- a/packages/swarm-styles/lib/components/checkbox.css
+++ b/packages/swarm-styles/lib/components/checkbox.css
@@ -18,8 +18,9 @@
     border: 1px solid var(--color-gray-3);
     margin-right: var(--size-space-half);
     border-radius: 4px;
-    height: 19px;
-    width: 19px;
+    height: 20px;
+    width: 20px;
+    box-sizing: border-box;
 }
 
 /* hover */
@@ -28,8 +29,8 @@ label[data-swarm-checkbox]:hover  span[data-swarm-checkbox-field] {
 }
 
 /* focused */
-[data-swarm-checkbox-field]:focus {
-    border: 1px solid yellow;
+[data-swarm-checkbox]:focus-within [data-swarm-checkbox-field] {
+    box-shadow: 0 0 1px 2px rgb(94, 158, 214);
 }
 
 /* checked */
