--- a/packages/swarm-styles/lib/main.css
+++ b/packages/swarm-styles/lib/main.css
@@ -2,6 +2,7 @@
 @import './components/button.css';
 @import './components/checkbox.css';
 @import './components/radio.css';
+@import './components/field.css';
 @import './components/textInput.css';
 @import './components/togglePill.css';
 @import './components/toggle.css';
