extend and export example

--- a/packages/swarm-styles/lib/components/linkButton.css
+++ b/packages/swarm-styles/lib/components/linkButton.css
@@ -1,9 +1,9 @@
   [data-swarm-link] {
-    @extend %swarm-button;
+    @extend %data-swarm-button;
   }
 
   [data-swarm-link]{
-    @extend %swarm-button;
+    @extend %data-swarm-button;
   }
 
   /* focus & active */
