--- a/packages/swarm-styles/lib/components/button.css
+++ b/packages/swarm-styles/lib/components/button.css
@@ -96,11 +96,14 @@
   color: var(--color-viridian);
 }
 
-%swarm-button-primary,
-[data-swarm-button="primary"] {
+%swarm-button-primary {
   background-color: var(--color-peach);
   border: 1px solid var(--color-peach);
   color: var(--color-white);
+}
+
+[data-swarm-button="primary"] {
+  @extend %swarm-button-primary;
 }
 
 %swarm-button-neutral,
