--- a/packages/swarm-docs/src/assets/docs.css
+++ b/packages/swarm-docs/src/assets/docs.css
@@ -62,9 +62,7 @@ h1.docs-title a {
 /* Props Table */
 .props-table {
   width: 100%;
-  border-collapse: separate;
   border-spacing: 5px;
-  margin-left: -5px;
 }
 
 .props-table thead,
@@ -78,24 +76,32 @@ h1.docs-title a {
   color: var(--color-gray-7);
 }
 
-.props-table tfoot th{
-  border-bottom: 0;
-  border-top: 2px solid var(--color-indigo);
-}
-
 .props-table th,
 .props-table td {
-  padding: 10px 20px 10px 0;
+  padding: 14px 20px 14px 0;
 }
 
-.props-table td,
-.props-table td span {
+.props-table td {
   color: var(--color-gray-5);
   font-size: var(--font-size-small);
+  border-bottom: 1px solid var(--color-gray-2);
 }
 
-.props-table .text-code {
+.props-table tbody tr:last-child td {
+  border-bottom: 2px solid var(--color-indigo);
+}
+
+.props-table tr:hover {
+  background-color: var(--color-beach-highlight);
+}
+
+.props-table thead tr:hover {
+  background: 0;
+}
+
+.props-table pre {
   font-family: monospace;
+  display: inline;
   background-color: var(--color-gray-2);
   border-radius: 3px;
   color: var(--color-gray-7);
