--- a/packages/swarm-styles/lib/main.css
+++ b/packages/swarm-styles/lib/main.css
@@ -4,6 +4,7 @@
 @import './components/checkbox.css';
 @import './components/radio.css';
 @import './components/textInput.css';
+@import './components/textarea.css';
 @import './components/togglePill.css';
 @import './components/toggle.css';
 @import './components/select.css';
