--- a/packages/swarm-styles/lib/components/field.css
+++ b/packages/swarm-styles/lib/components/field.css
@@ -1,3 +1,5 @@
 [data-swarm-field-helper] {
+    color: var(--color-gray-5);
     font-size: var(--font-size-small);
+    line-height: var(--font-line-height-small);
 }
