--- a/packages/swarm-styles/lib/components/textInput.css
+++ b/packages/swarm-styles/lib/components/textInput.css
@@ -36,7 +36,7 @@
 [data-swarm-input-icon] {
     align-content: center;
     bottom: 0;
-    display: flex important!;
+    display: flex !important;
     left: 0;
     padding: var(--size-space-default) var(--size-space-half);
     position:absolute;
