--- a/packages/swarm-styles/lib/main.css
+++ b/packages/swarm-styles/lib/main.css
@@ -2,6 +2,7 @@
 @import './components/button.css';
 @import './components/linkButton.css'; /* extends button.css */
 @import './components/checkbox.css';
+@import './components/numericalInput.css';
 @import './components/radio.css';
 @import './components/textInput.css';
 @import './components/textarea.css';
