--- a/packages/swarm-styles/lib/spacing.css
+++ b/packages/swarm-styles/lib/spacing.css
@@ -1,3 +1,17 @@
 :root {
     --space: 16px;
 }
+
+/* Medium breakpoint overrides */
+@media only screen and (min-width: 640px) {
+  :root {
+      --responsive-space: 20px;
+   }
+}
+
+/* Large breakpoint overrides */
+@media only screen and (min-width: 840px) {
+    :root {
+        --responsive-space: 20px;
+    }
+}
