--- a/packages/swarm-styles/lib/spacing.css
+++ b/packages/swarm-styles/lib/spacing.css
@@ -1,17 +1,17 @@
 :root {
-    --space: 16px;
+    --space: var(--size-space-default);
 }
 
 /* Medium breakpoint overrides */
 @media only screen and (min-width: 640px) {
   :root {
-      --responsive-space: 20px;
+      --responsive-space: var(--size-space-largeDefault);
    }
 }
 
 /* Large breakpoint overrides */
 @media only screen and (min-width: 840px) {
     :root {
-        --responsive-space: 20px;
+        --responsive-space: var(--size-space-largeDefault);
     }
 }
