fix: reset button has quarter space

--- a/packages/swarm-styles/lib/components/button.css
+++ b/packages/swarm-styles/lib/components/button.css
@@ -178,6 +178,10 @@
   @extend %swarm-button-disabled;
 }
 
+[data-swarm-button="reset"] {
+  padding: var(--size-space-quarter);
+}
+
 /* small */
 %swarm-button-small {
   padding: var(--space-half) var(--space-half);
