fix(swarm-styles): update spacing css

--- a/packages/swarm-styles/lib/spacing.css
+++ b/packages/swarm-styles/lib/spacing.css
@@ -1,17 +1,18 @@
 :root {
+    --space-quarter: var(--size-space-quarter);
+    --space-half: var(--size-space-half);
     --space: var(--size-space-default);
+    --space-double: var(--size-space-double);
+    --space-quadruple: var(--size-space-quadruple);
 }
 
 /* Medium breakpoint overrides */
 @media only screen and (min-width: 640px) {
   :root {
-      --responsive-space: var(--size-space-largeDefault);
+    --space-quarter: var(--size-space-large-quarter);
+    --space-half: var(--size-space-large-half);
+    --space: var(--size-space-large-default);
+    --space-double: var(--size-space-large-double);
+    --space-quadruple: var(--size-space-large-quadruple);
    }
-}
-
-/* Large breakpoint overrides */
-@media only screen and (min-width: 840px) {
-    :root {
-        --responsive-space: var(--size-space-largeDefault);
-    }
 }
