chore: no longer need components.css. move grow styles to buttons.css

--- a/packages/swarm-styles/lib/components/button.css
+++ b/packages/swarm-styles/lib/components/button.css
@@ -29,6 +29,10 @@
   @extend %button-personality;
 }
 
+[data-swarm-width="grow"] {
+  width: 100%;
+}
+
 /* focus & active */
 %swarm-button-default-focus {
   background-color: var(--color-viridian);
