docs: togglepill examples for grow

--- a/packages/swarm-styles/lib/components/toggle.css
+++ b/packages/swarm-styles/lib/components/toggle.css
@@ -21,6 +21,10 @@
     background-color: #FAFAFA;
 }
 
+[data-swarm-width="grow"] {
+    width: 100%;
+}
+
 [data-swarm-toggle] [data-swarm-toggle-switch-disc] {
     height: 24px;
     width: 24px;
