chore: refactor dup styles to shared

--- a/packages/swarm-styles/lib/main.css
+++ b/packages/swarm-styles/lib/main.css
@@ -10,3 +10,4 @@
 @import './components/togglePill.css';
 @import './components/toggle.css';
 @import './components/select.css';
+@import './components/shared.css';
