--- a/packages/swarm-styles/lib/components/button.css
+++ b/packages/swarm-styles/lib/components/button.css
@@ -77,6 +77,7 @@
 %swarm-button-default-hover {
   background-color: var(--color-viridian);
   color: var(--color-white);
+  fill: var(--color-white);
 }
 
 [data-swarm-button="default"]:hover {
@@ -114,6 +115,7 @@
   background-color: var(--color-white);
   border: 1px solid var(--color-viridian);
   color: var(--color-viridian);
+  fill: var(--color-viridian);
 }
 
 [data-swarm-button="default"] {
@@ -124,6 +126,7 @@
   background-color: var(--color-peach);
   border: 1px solid var(--color-peach);
   color: var(--color-white);
+  fill: var(--color-white);
 }
 
 [data-swarm-button="primary"] {
@@ -134,6 +137,7 @@
   background-color: var(--color-gray-1);
   border: 1px solid var(--color-gray-4);
   color: var(--color-gray-6);
+  fill: var(--color-gray-6);
 }
 
 [data-swarm-button="neutral"] {
@@ -144,6 +148,7 @@
   background-color: var(--color-white);
   border: 1px solid var(--color-gray-4);
   color: var(--color-gray-6);
+  fill: var(--color-gray-6);
 }
 
 [data-swarm-button="bordered"] {
@@ -153,6 +158,7 @@
 %swarm-button-inverted {
   border: 1px solid var(--color-white);
   color: var(--color-white);
+  fill: var(--color-white);
 }
 
 [data-swarm-button="inverted"] {
@@ -173,6 +179,7 @@
   background-color: var(--color-gray-3);
   border: 1px solid var(--color-gray-3);
   color: var(--color-gray-5);
+  fill: var(--color-gray-5);
 }
 
 [data-swarm-button="disabled"] {
