fix: page--sectionTitle color set via overrides

--- a/packages/swarm-styles/lib/overrides.css
+++ b/packages/swarm-styles/lib/overrides.css
@@ -11,6 +11,7 @@
   * Ensure that the correct default swarm v2 color is used.
   */
 .text--pageTitle,
+.text--sectionTitle,
 .text--caption,
 .text--secondary {
     color: var(--color-gray-7);
