--- a/packages/swarm-styles/lib/components/button.css
+++ b/packages/swarm-styles/lib/components/button.css
@@ -205,7 +205,7 @@
   margin-right:  var(--space-half);
 }
 
-[data-swarm-button][data-icon="left"] .svg-icon {
+[data-swarm-button][data-icon="left"] > span > .svg-icon {
   @extend %swarm-button-icon-left;
 }
 
@@ -213,7 +213,7 @@
   margin-left:  var(--space-half);
 }
 
-[data-swarm-button][data-icon="right"] .svg-icon {
+[data-swarm-button][data-icon="right"] > span > .svg-icon {
   @extend %swarm-button-icon-right;
 }
 
