fix: padding none available on button resets

--- a/packages/swarm-styles/lib/components/button.css
+++ b/packages/swarm-styles/lib/components/button.css
@@ -191,6 +191,11 @@
   font-weight: var(--font-weight-normal);
 }
 
+[data-swarm-button="reset"].padding--none, 
+[data-swarm-button="reset"][data-icon="only"].padding--none {
+  padding: 0;
+}
+
 /* small */
 %swarm-button-small {
   padding: var(--space-quarter) var(--space-half);
